<resources>
    <string name="app_name">MaterialCalendarWeekView</string>
    <string name="calender_sun">Min</string>
    <string name="calender_mon">Sen</string>
    <string name="calender_tue">Sel</string>
    <string name="calender_wed">Rab</string>
    <string name="calender_thu">Kam</string>
    <string name="calender_fri">Jum</string>
    <string name="calender_sat">Sab</string>

    <string name="calender_jan">Januari</string>
    <string name="calender_feb">Februari</string>
    <string name="calender_mar">Maret</string>
    <string name="calender_apr">April</string>
    <string name="calender_mei">Mei</string>
    <string name="calender_jun">Juni</string>
    <string name="calender_jul">Juli</string>
    <string name="calender_agu">Agustus</string>
    <string name="calender_sep">September</string>
    <string name="calender_okt">Oktober</string>
    <string name="calender_nov">November</string>
    <string name="calender_des">Desember</string>
</resources>
