<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ImageButton
        android:id="@+id/btnPrev"
        android:layout_width="@dimen/calendar_arrow_size"
        android:layout_height="@dimen/calendar_arrow_size"
        android:layout_marginStart="@dimen/calendar_arrow_horizontal_margin"
        android:background="@drawable/mcv_action_previous"
        android:backgroundTint="#FF3333"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/monthYear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/monthYear"/>

    <View
        android:id="@+id/view_btn_prev"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/monthYear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/monthYear" />


    <TextView
        android:id="@+id/monthYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="June"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="@dimen/calendar_arrow_size"
        android:layout_height="@dimen/calendar_arrow_size"
        android:layout_marginEnd="@dimen/calendar_arrow_horizontal_margin"
        android:background="@drawable/mcv_action_next"
        android:backgroundTint="#FF3333"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="@id/monthYear"
        app:layout_constraintBottom_toBottomOf="@+id/monthYear"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/view_btn_next"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="@id/monthYear"
        app:layout_constraintBottom_toBottomOf="@+id/monthYear"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <LinearLayout
        android:id="@+id/layout_weekDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/monthYear">

        <TextView
            android:id="@+id/weekday_sun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calender_sun" />

        <TextView
            android:id="@+id/weekday_mon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calender_mon" />

        <TextView
            android:id="@+id/weekday_tue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calender_tue" />

        <TextView
            android:id="@+id/weekday_wed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calender_wed" />

        <TextView
            android:id="@+id/weekday_thu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calender_thu" />

        <TextView
            android:id="@+id/weekday_fri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calender_fri" />

        <TextView
            android:id="@+id/weekday_sat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/calender_sat" />


    </LinearLayout>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pagerDates"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/layout_weekDays" />

</androidx.constraintlayout.widget.ConstraintLayout>